--- a/style.css
+++ b/style.css
@@ -1,60 +1,71 @@
 body {
-  background-color: gainsboro;
+  background-color: #f3f3f3;
+  padding-top: 3em;
+  font-family: Helvetica;
+  font-size: 13px;
 }
 
-body div {
-  height: 300px;
-  width: 800px;
-  background-color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding-left: 40px;
-  margin: 50px auto;
-  font-family: Arial, Helvetica, sans-serif;
+.page-wrap {
+  padding: 2em;
+  background-color: #fff;
+  width: 50%;
+  margin: 0 auto;
 }
 
-body div header {
-  color: slategrey;
-  font-size: 25px;
-  height: 10px;
-  padding-top: 0px;
-  margin-top: 0px;
-}
-
-body div main {
-  height: 5px;
-}
-
-body div ul {
-  font-size: 18px;
-  color: gray;
-  height: 20px;
-}
-
-body div ul .label1 {
-  list-style: initial;
-  text-decoration: none;
-  content: icon;
-  color: blue;
-}
-
-body div ul .label2 {
-  color: gray;
-}
-
-body div ul .label3 {
+h2 {
   color: black;
 }
 
-body div ul .label4 {
-  color: firebrick;
+.skill-bar-container {
+  position: relative;
+  width: 100%;
+  border-radius: 4px;
+  background-color: whitesmoke;
+  margin-bottom: 0.5em;
+}
+
+.skill-bar-container .skill-bar {
+  display: block;
+  border-radius: 4px;
+  height: 25px;
+}
+
+.skill-bar-container .skill-bar.level1 {
+  width: 20%;
+  background-color: #d7edfa;
+}
+
+.skill-bar-container .skill-bar.level2 {
+  width: 40%;
+  background-color: #c8e7f8;
+}
+
+.skill-bar-container .skill-bar.level3 {
+  width: 60%;
+  background-color: #b9e0f7;
+}
+
+.skill-bar-container .skill-bar.level4 {
+  width: 80%;
+  background-color: #a9d9f5;
+}
+
+.skill-bar-container .skill-bar.level5 {
+  width: 100%;
+  background-color: #9ad3f3;
+}
+
+.skill-bar-container .skill-name {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  color: #333;
+}
+
+.skill-bar-container .skill-percent {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: #999;
 }
 /*# sourceMappingURL=style.css.map */
